--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Which features did you implement?
 
 Did you complete any extra-credit tasks? If so, describe them!
   (list extra-credit tasks)
-  TODO:
+  Dynamic membership
 
 Any special instructions for building and running your solution?
   (include detailed instructions)
